<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ededed"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
	        android:focusable="true" android:focusableInTouchMode="true"
	        android:layout_width="0px" android:layout_height="0px">
	        <requestFocus />
	    </LinearLayout>
        <EditText
            android:id="@+id/searchText"
            android:layout_width="0dip"
            android:layout_height="48dp"
            android:hint="@string/hint_search"
            android:layout_weight="1"
            android:background="@drawable/go_search_title"
            android:paddingLeft="10dp"
            android:ems="10" >

        </EditText>

        <Button
            android:id="@+id/go_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/go_search_btn_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/type_list_bg"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp" >

            <Button
                android:id="@+id/type_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_1"
                android:drawableTop="@drawable/type_1"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

            <Button
                android:id="@+id/type_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_2"
                android:drawableTop="@drawable/type_2"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

            <Button
                android:id="@+id/type_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_3"
                android:drawableTop="@drawable/type_3"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp" >

            <Button
                android:id="@+id/type_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_4"
                android:drawableTop="@drawable/type_4"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

            <Button
                android:id="@+id/type_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_5"
                android:drawableTop="@drawable/type_5"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

            <Button
                android:id="@+id/type_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_6"
                android:drawableTop="@drawable/type_6"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp" >

            <Button
                android:id="@+id/type_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_7"
                android:drawableTop="@drawable/type_7"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

            <Button
                android:id="@+id/type_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_8"
                android:drawableTop="@drawable/type_8"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

            <Button
                android:id="@+id/type_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/type_9"
                android:drawableTop="@drawable/type_9"
                android:background="@drawable/type_list_btn_bg"
                style="@style/main_tab_bottom" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
