<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <FrameLayout 
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"  
    		android:layout_height="0dp"  
    		android:layout_weight="0.0"
            >
        </FrameLayout>
        
        <FrameLayout
            android:id="@+android:id/tabcontent"
		    android:layout_width="fill_parent"  
		    android:layout_height="fill_parent"  
		    android:layout_weight="1.0"
		    >

            <LinearLayout
                android:id="@+id/map_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/map_loading" >

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/panel_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/loading_map"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true" />

                <ImageView
                    android:id="@+id/compass"
                    android:contentDescription="@string/compass_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/compass" />

                <Button
                    android:id="@+id/switch2D3D"
                    android:layout_width="@dimen/right_top_button_width"
                    android:layout_height="@dimen/right_top_button_height"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/map_2d" />

                <Button
                    android:id="@+id/left_button_panel"
                    android:layout_width="@dimen/left_button_panel_size"
                    android:layout_height="@dimen/left_button_panel_size"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/adjust" />

            </RelativeLayout>

		</FrameLayout>
		
        <TabWidget 
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone"/>
        <RadioGroup
            android:id="@+id/main_tab"
            android:background="@drawable/maintab_toolbar_bg"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="bottom">
            <RadioButton 
                android:layout_marginTop="2.0dip"
                android:text="@string/main_home"
                android:drawableTop="@drawable/icon_1_n"
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"/>
            <RadioButton 
                android:layout_marginTop="2.0dip"
                android:text="@string/main_news"
                android:drawableTop="@drawable/icon_2_n"
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"/>
            <RadioButton 
                android:layout_marginTop="2.0dip"
                android:text="@string/main_my_info"
                android:drawableTop="@drawable/icon_3_n"
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"/>
            <RadioButton 
                android:layout_marginTop="2.0dip"
                android:text="@string/menu_search"
                android:drawableTop="@drawable/icon_4_n"
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"/>
            <!-- 
            <RadioButton 
                android:layout_marginTop="2.0dip"
                android:text="@string/more"
                android:drawableTop="@drawable/icon_5_n"
                android:id="@+id/radio_button4"
                style="@style/main_tab_bottom"/>
             -->
        </RadioGroup>
        
    </LinearLayout>
</TabHost>
